--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "next": "15.3.4"
+    "google-auth-library": "^10.1.0",
+    "next": "15.3.4",
+    "next-auth": "^4.24.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
